# uparser

./: .copier-answers.yml  .coveragerc  .cspell.dictionary.txt  .cspell.json  .gitignore  .pre-commit-config.yaml  GNUmakefile  README.md  REUSE.toml  conftest.py  mkdocs.yml  prek.toml  pyproject.toml  ruff.toml
.pdoc-theme/: theme.css
docs/: index.md  reference.md
examples/: calculator.py  csv_.py  json_.py  test_calculator.py  test_csv_.py  test_json_.py
src/uparser/: __init__.py  combinators.py  core.py  parsers.py  shortcuts.py  util.py
tests/: test_uparser.py  test_version.py
