[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/uparser/__about__.py"

[project]
dynamic = ["version"]

description = "uparser"
keywords = []
license = "MIT"
name = "uparser"
readme = "README.md"
requires-python = ">=3.12"

urls.Documentation = "https://github.com/pcastellazzi/uparser.git#readme"
urls.Repository = "https://github.com/pcastellazzi/uparser.git"
urls.Issues = "https://github.com/pcastellazzi/uparser.git/issues"

authors = [
    {name = "Pablo Castellazzi", email = "pablo.castellazzi@icloud.com"},
]
maintainers = [
    {name = "Pablo Castellazzi", email = "pablo.castellazzi@icloud.com"},
]

classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers

    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",

    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Unix",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",

    "Topic :: Utilities",
]

dependencies = []

[dependency-groups]
dev = ["covdefaults>=2.3", "coverage>=7.7", "pytest>=8.3", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
addopts = ["--quiet", "--strict-markers", "-Werror"]

[tool.uv]
python-preference = "only-managed"
